# models/services/subs_serv.go
@@ -6,4 +6,5 @@ import (
 
 type SubsServ interface {
 	GetCurrentSubs(accessToken string) (*subsRes.Response, error)
+	GetTokenUsage(accessToken string) (*subsRes.TokenUsageResponse, error)
 }
